--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -13,7 +13,7 @@
   delegate_to: "{{ restic_host }}"
   become: True
   file:
-    path: "{{ restic_path }}"
+    path: "{{ restic_remote_path }}"
     owner: "{{ restic_remote_user }}"
     group: "{{ restic_remote_user }}"
     state: directory
@@ -23,6 +23,7 @@
   become: True
   become_user: "{{ restic_local_user }}"
   shell: restic init
+  args:
     environment:
       RESTIC_REPOSITORY: "sftp://{{ restic_remote_user }}@{{ restic_host }}:{{ restic_path }}"
       RESTIC_PASSPHRASE: "{{ restic_passphrase }}"
