Fix use of undefined variable

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -25,5 +25,5 @@
   shell: restic init
   args:
     environment:
-      RESTIC_REPOSITORY: "sftp://{{ restic_remote_user }}@{{ restic_host }}:{{ restic_path }}"
+      RESTIC_REPOSITORY: "sftp://{{ restic_remote_user }}@{{ restic_host }}:{{ restic_remote_path }}"
       RESTIC_PASSPHRASE: "{{ restic_passphrase }}"
