--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -37,5 +37,5 @@
   become_user: "{{ restic_local_user }}"
   shell: restic init
   environment:
-    RESTIC_REPOSITORY: "sftp://{{ restic_remote_user }}@{{ restic_host }}:{{ restic_remote_path }}"
+    RESTIC_REPOSITORY: "sftp:{{ restic_remote_user }}@{{ restic_host }}:{{ restic_remote_path }}"
     RESTIC_PASSPHRASE: "{{ restic_passphrase }}"
