Fix sftp syntax, passphrase -> password

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
-restic_passphrase: supersecretpassphrase # required, passphrase for the backup
+restic_password: supersecretpassword     # required, passphrase for the backup
 restic_host: some.host.tld               # required, remote host
 restic_local_user: local_user            # required, user on the local host
 restic_local_paths: []                   # required, paths on the local host
