--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -2,6 +2,6 @@
 - name: restart restic timer
   become: True
   systemd:
-    name: restic.timer
+    name: "restic.{{ restic_name }}.timer"
     state: restarted
     enabled: yes
